# next.js

./: .alexrc  .gitignore  AGENTS.md  Cargo.toml  contributing.md  jest.config.js  lerna.json  package.json  pnpm-lock.yaml  run-evals.js  run-tests.js  skills-lock.json
.agents/skills/backport-pr/: SKILL.md
.agents/skills/create-pr/: SKILL.md
.agents/skills/gh-stack/: SKILL.md
.agents/skills/insight-error-page/: SKILL.md
.agents/skills/pr-status-triage/: SKILL.md  workflow.md
.claude-plugin/: marketplace.json
.config/ast-grep/rule-tests/: no-typeof-window-require-test.yml  no-typeof-window-require-tsx-test.yml
.config/ast-grep/rules/: no-typeof-window-require-tsx.yml  no-typeof-window-require.yml  (+1 more)
.github/: next-stats-action.Dockerfile  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1.bug_report.yml
.github/workflows/: build_and_deploy.yml  build_and_test.yml  build_reusable.yml  create_release_branch.yml  integration_tests_reusable.yml  pr_stack_optimizer.yml  pull_request_stats.yml  release-next-rspack.yml  retry_deploy_test.yml  test_e2e_deploy_release.yml  test_examples.yml  trigger_release.yml  update_react.yml  upload_preview_tarballs.yml
apps/bundle-analyzer/: package.json
bench/: BENCHMARKING.md
bench/basic-app/: .gitignore  next.config.js
bench/module-cost/: package.json
bench/render-pipeline/: README.md  benchmark.ts
contributing/core/: developing.md
contributing/repository/: pull-request-descriptions.md
contributing/turbopack/: tracing.md
crates/next-api/: Cargo.toml
crates/next-api/src/: app.rs  dynamic_imports.rs  empty.rs  instrumentation.rs  lib.rs  middleware.rs  module_graph.rs  next_server_nft.rs  nft.rs  nft_json.rs  operation.rs  output_mode.rs  pages.rs  paths.rs  project.rs  project_asset_hashes_manifest.rs  route.rs  routes_hashes_manifest.rs  server_actions.rs
crates/next-core/: Cargo.toml
crates/next-core/src/: app_page_loader_tree.rs  app_structure.rs  base_loader_tree.rs  browser_variant_modules.rs  emit.rs  lib.rs  middleware.rs  next_config.rs  next_import_map.rs  segment_config.rs
crates/next-core/src/next_app/: app_client_references_chunks.rs
crates/next-core/src/next_app/metadata/: route.rs
crates/next-core/src/next_client/: context.rs  mod.rs  transforms.rs
crates/next-core/src/next_edge/: context.rs
crates/next-core/src/next_font/: issue.rs
crates/next-core/src/next_font/local/: mod.rs
crates/next-core/src/next_manifests/: client_reference_manifest.rs  mod.rs
crates/next-core/src/next_server/: context.rs  resolve.rs
crates/next-core/src/next_shared/: resolve.rs
crates/next-core/src/next_shared/transforms/: next_debug_instant_stack.rs  swc_ecma_transform_plugins.rs
crates/next-core/src/next_shared/webpack_rules/: babel.rs  mod.rs
crates/next-napi-bindings/: Cargo.toml
docs/01-app/: 04-glossary.mdx
errors/: blocking-prerender-client-hook.mdx  blocking-prerender-crypto-client.mdx  blocking-prerender-crypto.mdx  blocking-prerender-current-time-client.mdx  blocking-prerender-current-time.mdx  blocking-prerender-dynamic.mdx  blocking-prerender-metadata-dynamic.mdx  blocking-prerender-metadata-runtime.mdx  blocking-prerender-random-client.mdx  blocking-prerender-random.mdx  blocking-prerender-runtime.mdx  blocking-prerender-viewport-dynamic.mdx  blocking-prerender-viewport-runtime.mdx  cache-bypass-in-dev.mdx  edge-runtime-deprecated.mdx  instant-link-prefetch-partial.mdx  instant-shell-url-data.mdx  instant-unrendered-segment.mdx  preferred-region-deprecated.mdx  revalidate-tag-single-arg.mdx
examples/reproduction-template/: package.json
patches/: playwright-core@1.61.0.patch
rspack/: package.json  pnpm-lock.yaml
rspack/.cargo/: config.toml
rspack/crates/binding/: Cargo.toml  build.rs  index.d.ts  package.json  pnpm-lock.yaml
rspack/crates/binding/src/: force_complete_runtime_plugin.rs  lib.rs
rspack/lib/: index.d.ts  index.js
rspack/scripts/: rust-lld
scripts/: docker-image-cache.js  docker-native-build.js  generate-browser-variant-aliases.mjs  install-native.mjs  pr-ci-comment.mjs  pr-status.js  publish-release.js  release-changelog.js  release-github-api.js  release-github-auth.js  run-jest.sh  start-release.js  sync-react.js  turbo-cache.mjs  upload-adapter-test-results.mjs
scripts/github-utils/: signed-commit.js
scripts/merge-errors-json/: merge.mjs
skills/.claude-plugin/: plugin.json
skills/next-cache-components-adoption/: SKILL.md
skills/next-dev-loop/: SKILL.md
skills/next-ppr-optimizer/: SKILL.md
test/: cache-components-tests-manifest.json  deploy-tests-manifest.json  rspack-build-tests-manifest.json  rspack-dev-tests-manifest.json
test/.stats-app/: package.json
test/e2e/: prerender.test.ts
test/lib/: add-redbox-matchers.ts  next-test-utils.ts  next-webdriver.ts  turbo.ts
test/unit/: instant-config-normalization.test.ts  next-image-get-img-props.test.ts  next-image-legacy.test.ts  swc-auto-polyfill-options.test.ts  write-app-declarations.test.ts
turbopack/: AGENTS.md
turbopack/crates/turbo-bincode/: Cargo.toml
turbopack/crates/turbo-bincode/src/: lib.rs
turbopack/crates/turbo-tasks-backend/: Cargo.toml
turbopack/crates/turbo-tasks-backend/fuzz/: Cargo.toml
turbopack/crates/turbo-tasks-backend/fuzz/src/: graph.rs
turbopack/crates/turbo-tasks-backend/src/: backing_storage.rs  data.rs  kv_backing_storage.rs
turbopack/crates/turbo-tasks-backend/src/backend/: counter_map.rs  mod.rs  storage.rs  storage_schema.rs
turbopack/crates/turbo-tasks-backend/src/backend/operation/: aggregation_update.rs  cleanup_old_edges.rs  invalidate.rs  mod.rs  update_cell.rs
turbopack/crates/turbo-tasks-backend/src/utils/: mod.rs  shard_amount.rs  stopwatch.rs
turbopack/crates/turbo-tasks-backend/tests/: debug.rs  effects.rs  invalidation.rs
turbopack/crates/turbo-tasks-fetch/: Cargo.toml
turbopack/crates/turbo-tasks-fetch/src/: error.rs
turbopack/crates/turbo-tasks-fetch/tests/: fetch.rs
turbopack/crates/turbo-tasks-malloc/: Cargo.toml
turbopack/crates/turbo-tasks-malloc/src/: lib.rs  memory_pressure.rs
(+1589 files in other folders)
