[package]
name = "next-api"
version = "0.1.0"
description = "TBD"
license = "MIT"
edition = "2024"
autobenches = false

[lib]
bench = false

[features]
default = ["process_pool"]
process_pool = ["next-core/process_pool", "turbopack-node/process_pool"]
worker_pool = ["next-core/worker_pool", "turbopack-node/worker_pool"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
byteorder = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
next-core = { workspace = true }
regex = { workspace = true }
roaring = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
swc_core = { workspace = true }
tracing = { workspace = true }
turbo-bincode = { workspace = true }
turbo-rcstr = { workspace = true }
turbo-tasks = { workspace = true }
turbo-tasks-hash = { workspace = true }
turbo-tasks-env = { workspace = true }
turbo-tasks-fs = { workspace = true }
turbo-unix-path = { workspace = true }
turbopack = { workspace = true }
turbopack-analyze = { workspace = true }
turbopack-browser = { workspace = true }
turbopack-core = { workspace = true }
turbopack-css = { workspace = true }
turbopack-ecmascript = { workspace = true }
turbopack-node = { workspace = true, default-features = false }
turbopack-nodejs = { workspace = true }
turbopack-resolve = { workspace = true }
turbopack-wasm = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
turbo-tasks-malloc = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
turbo-tasks-backend = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
vergen = { workspace = true }
