[package]
name = "turbo-bincode"
version = "0.0.0"
description = "Utilities for bincode used in turbo-tasks and turbopack"
license = "MIT"
edition = "2024"

[lib]

[lints]
workspace = true

[dependencies]
bincode = { workspace = true }
either = { workspace = true }
indexmap = { workspace = true }
mime = { workspace = true }
ringmap = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
turbo-tasks-hash = { workspace = true }
unty = { workspace = true }
